Network-egres/4-b17-allow-traffic-alpha.yml
#This Policy Will Allow Traffic Between PODs in Alpha NS with Label ns=alpha
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-traffic-within-alpha-namespace
  namespace: alpha
spec:
  podSelector: 
   matchLabels:
    ns: alpha
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          ns: alpha
  egress:
  - to:
    - podSelector:
        matchLabels:
          ns: alpha
