Network-egres/Allow Ingress Traffic From Bravo To Alp.yml
#Allow Ingress Traffic From Bravo To Alpha applied at Alpha Namespace
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-traffic-from-bravo-to-alpha
  namespace: alpha
spec:
  podSelector: 
   matchLabels:
    ns: alpha
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          nsp: bravo
    - podSelector:
        matchLabels:
          ns: bravo

#Allow Edgress Traffic From Bravo To Alpha applied at Bravo Namespace
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-traffic-from-bravo-to-alpha
  namespace: bravo
spec:
  podSelector: 
   matchLabels:
    ns: bravo
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          nsp: alpha
    - podSelector:
        matchLabels:
          ns: alpha
